fix dashboard: data coming in different chart
